[feature][core] Optimize garbage collection settings for JDK 17